Display genoverse on occasion

--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -8,7 +8,7 @@
         <li><h5>Navigation Panel</h5></li>
         <li><a href="#protGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
         <li><a href="#protSummary"><i class="fa fa-comment-o fa-fw"></i> TGEs</a></li>
-        <li><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genomic context</a></li>
+        <li id="genoContext"><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genomic context</a></li>
       </ul>
       </div>
     </div>
