--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -16,7 +16,7 @@
     <div id="page-wrapper">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="page-header">Uniprot ID: <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ genoverse.uniprot }}</a></h1>
+          <h1 class="page-header">Uniprot ID: <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ uniprot }}</a></h1>
         </div>
       </div>
 
