--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -7,7 +7,7 @@
       <ul class="nav" id="side-menu">
         <li><h5>Navigation Panel</h5></li>
         <li><a href="#protGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-        <li><a href="#protSummary"><i class="fa fa-comment-o fa-fw"></i> TGEs</a></li>
+        <li><a href="#protSummary"><i class="fa fa-table fa-fw"></i> TGEs</a></li>
         <li id="genoContext"><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genomic context</a></li>
       </ul>
       </div>
@@ -40,7 +40,7 @@
 
       	<div class="panel panel-default" id="protSummary">
           <div class="panel-heading">
-            <i class="fa fa-comment-o fa-fw"></i> TGEs
+            <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
           </div>
           
           <div class="panel-body">
