--- a/pit_app/templates/results/peptide.html
+++ b/pit_app/templates/results/peptide.html
@@ -73,7 +73,7 @@
             {% for tge in tges %}
               <tr>
                 <td>
-                <a href="tge?accession={{ tge.accession }}" target="_blank">{{ tge.accession }}</a>
+                <a href="tge?accession={{ tge.accession }}">{{ tge.accession }}</a>
                 </td>
                 <td><div class="wordwrap" style="width: 700px; font-size: 13px">{{ tge.amino_seq }}</div></td>
               </tr>
