--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -6,8 +6,9 @@
     <div class="sidebar-nav navbar-collapse">
       <ul class="nav" id="side-menu">
         <li><h5>Navigation Panel</h5></li>
+        <li><a href="#protSummary"><i class="fa fa-comment-o fa-fw"></i> Summary</a></li>
         <li><a href="#protGraph"><i class="fa fa-pie-chart fa-fw"></i> Graph</a></li>
-        <li><a href="#protSummary"><i class="fa fa-table fa-fw"></i> TGEs</a></li>
+        <li><a href="#protTGEs"><i class="fa fa-table fa-fw"></i> TGEs</a></li>
         <li id="genoContext"><a href="#genoGraph"><i class="fa fa fa-picture-o fa-fw"></i> Genomic context</a></li>
       </ul>
       </div>
@@ -16,11 +17,24 @@
     <div id="page-wrapper">
       <div class="row">
         <div class="col-lg-12">
-          <h1 class="page-header">Uniprot ID: <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}">{{ uniprot }}</a></h1>
+          <h1 class="page-header">Uniprot ID: {{ uniprot }}</a></h1>
         </div>
       </div>
 
       <div class="row">
+        <div class="panel panel-default" id="protSummary">
+          <div class="panel-heading"><i class="fa fa-bar-chart-o fa-fw"></i> Summary</div>
+            
+          <div class="panel-body">
+            <div class="row" style="margin-left:5px">
+              <label>Uniprot Reference:</label> <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ uniprot }}</a></br>
+              <label>Protein Name:</label> {{ summary.protein_name }}</br>
+              <label>Gene Name:</label> {{ summary.gene_name }}</br>
+              <label>Protein Description:</label> {{ summary.protein_descr }}</br>
+            </div>
+          </div>
+        </div>
+
         <div id="protGraph" class="panel panel-default sunburst" style="position: relative !important;">
           <div class="panel-heading">
             <i class="fa fa-pie-chart fa-fw"></i> Graph
@@ -38,7 +52,7 @@
           <div style="clear: both;"></div>
         </div>
 
-      	<div class="panel panel-default" id="protSummary">
+      	<div class="panel panel-default" id="protTGEs">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
           </div>
