--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -34,8 +34,8 @@
               <a class="popoverData" href="#" data-content="UniProt accession number – click to see full record for this protein in UniProt." rel="popover" data-placement="bottom" data-original-title="UniProt Reference" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> <a href="http://www.uniprot.org/uniprot/{{ genoverse.uniprot }}" target="_blank">{{ uniprot }}</a></br>
               <label>Protein Name 
               <a class="popoverData" href="#" data-content="Short protein name associated with this UniProt accession number." rel="popover" data-placement="bottom" data-original-title="Protein Name" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.protein_name }}</br>
-              <label>Gene Name 
-              <a class="popoverData" href="#" data-content="Name of parent gene." rel="popover" data-placement="bottom" data-original-title="Gene Name" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.gene_name }}</br>
+              <label>Gene Symbol 
+              <a class="popoverData" href="#" data-content="Symbol of parent gene." rel="popover" data-placement="bottom" data-original-title="Gene Symbol" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.gene_name }}</br>
               <label>Protein Description 
               <a class="popoverData" href="#" data-content="Description of this protein, as it appears in UniProt." rel="popover" data-placement="bottom" data-original-title="Protein Description" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.protein_descr }}</br>
             </div>
