Max width for genoverse

--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -97,7 +97,7 @@
           </div>
           
           <div class="panel-body">
-            <div id="genoverse"></div>
+            <div id="genoverse" style="width: 900px !important; max-width: 900px !important;"></div>
           </div>
       </div>
     </div>
