--- a/pit_app/templates/results/protein.html
+++ b/pit_app/templates/results/protein.html
@@ -25,7 +25,7 @@
         <div class="panel panel-default" id="protSummary">
           <div class="panel-heading">
             <i class="fa fa-bar-chart-o fa-fw"></i> Summary
-            <a class="btn pull-right popoverData" href="#" data-content="Summary of everything the database contains about this particular protein." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Summary of everything the database contains about this particular protein." rel="popover" data-placement="left" data-original-title="Summary Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
             
           <div class="panel-body">
@@ -38,6 +38,8 @@
               <a class="popoverData" href="#" data-content="Symbol of parent gene." rel="popover" data-placement="bottom" data-original-title="Gene Symbol" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.gene_name }}</br>
               <label>Protein Description 
               <a class="popoverData" href="#" data-content="Description of this protein, as it appears in UniProt." rel="popover" data-placement="bottom" data-original-title="Protein Description" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.protein_descr }}</br>
+              <label>Organism
+              <a class="popoverData" href="#" data-content="The organism to which the protein belongs." rel="popover" data-placement="bottom" data-original-title="Organism" data-trigger="hover"><i class="fa fa-info-circle helpTipInner"></i></a>:</label> {{ summary.organism }}</br>
             </div>
           </div>
         </div>
@@ -45,7 +47,7 @@
         <div id="protGraph" class="panel panel-default sunburst" style="position: relative !important;">
           <div class="panel-heading">
             <i class="fa fa-pie-chart fa-fw"></i> Graph
-            <a class="btn pull-right popoverData" href="#" data-content="Visual summary of the experimentally observed Translated Genomic Elements (TGEs) and peptides associated with this protein. Move the mouse cursor over the plot for more detail." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Visual summary of the experimentally observed Translated Genomic Elements (TGEs) and peptides associated with this protein. Move the mouse cursor over the plot for more detail." rel="popover" data-placement="left" data-original-title="Graph Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
 
           <div class="col-md-8 col-md-offset-2">
@@ -62,7 +64,7 @@
       	<div class="panel panel-default" id="protTGEs">
           <div class="panel-heading">
             <i class="fa fa-table fa-fw"></i> Translated Genomic Elements (TGEs)
-            <a class="btn pull-right popoverData" href="#" data-content="List of experimentally observed TGEs that map to this protein." rel="popover" data-placement="left" data-original-title="Translated Genomic Elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="List of experimentally observed TGEs that map to this protein." rel="popover" data-placement="left" data-original-title="Translated Genomic Elements (TGEs)" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="panel-body">
@@ -93,7 +95,7 @@
         <div class="panel panel-default" id="genoGraph">
           <div class="panel-heading">
             <i class="fa fa fa-picture-o fa-fw"></i> Genomic context
-            <a class="btn pull-right popoverData" href="#" data-content="Genome browser representation of everything the database knows about this protein, specifically all observed TGEs and their associated peptide evidence. Genes from Ensembl are show for reference." rel="popover" data-placement="left" data-original-title="Genomic Context Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
+            <a class="btn pull-right popoverData"  data-content="Genome browser representation of everything the database knows about this protein, specifically all observed TGEs and their associated peptide evidence. Genes from Ensembl are show for reference." rel="popover" data-placement="left" data-original-title="Genomic Context Info" data-trigger="hover"><i class="fa fa-info-circle pull-right helpTip"></i></a>
           </div>
           
           <div class="panel-body">
